Fix collapsing optional text fields
Use JS to set a data attribute on text inputs so we can determine in
CSS if they are filled or not, for the purposes of styling the label.

--- a/newamericadotorg/assets/scss/components/form/_inputs.scss
+++ b/newamericadotorg/assets/scss/components/form/_inputs.scss
@@ -50,6 +50,7 @@ input[type="text"], textarea {
 	}
 	input[type="text"]:active + label,
 	input[type="text"]:focus + label,
+	input[type="text"][data-text-status="filled"] + label,
 	input[type="text"]:required:valid + label,
 	textarea:active + label,
 	textarea:focus + label,
